Profile property files and yaml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=ES
+
+guru.user=John
+guru.password=somepass
+guru.dburl=qwerty
+
+guru.jms.user=John
+guru.jms.password=somepass
+guru.jms.url=qwerty
